# slint-slider-test

./: Cargo.toml  Cross.toml  README.md  build.rs
src/: main.rs
ui/: main.slint
