[package]
name = "rusty_slider_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
rand = "0.8.5"

[target.'cfg(windows)'.dependencies]
slint = "1.3.2"

[target.'cfg(unix)'.dependencies]
slint = {version = "1.3.2",features = ["renderer-skia","renderer-skia-opengl"]}

[build-dependencies]
slint = "1.3.2"
slint-build = "1.3.2"
